// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the marks the editor puts on a flow program > a bare marker 1`] = `[]`;

exports[`the marks the editor puts on a flow program > a clause across two lines 1`] = `
[
  "0:24-29 tv-diag tv-diag--error A clause must be written within a single line",
]
`;

exports[`the marks the editor puts on a flow program > a date error and a flow error 1`] = `
[
  "0:26-42 tv-diag tv-diag--error End date (2026-09-23) is before start date (2026-09-24).
Correct the end date.",
  "0:47-51 tv-diag tv-diag--error Unknown clause 'evry' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;

exports[`the marks the editor puts on a flow program > a flow only in flow lines 1`] = `
[
  "1:7-11 tv-diag tv-diag--error Unknown clause 'evry' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
  "2:7-9 tv-diag tv-diag--error 'xN' requires a schedule clause (every / + / at)",
]
`;

exports[`the marks the editor puts on a flow program > a marker at the end of the task line 1`] = `
[
  "1:7-11 tv-diag tv-diag--error Unknown clause 'evry' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;

exports[`the marks the editor puts on a flow program > a missing weekday before a flow line 1`] = `
[
  "1:7-9 tv-diag tv-diag--error Expected a weekday (mon..sun), got 'x3'",
  "1:7-9 tv-diag tv-diag--error 'xN' requires a schedule clause (every / + / at)",
]
`;

exports[`the marks the editor puts on a flow program > a modifier alone 1`] = `
[
  "0:24-26 tv-diag tv-diag--error 'xN' requires a schedule clause (every / + / at)",
]
`;

exports[`the marks the editor puts on a flow program > a modifier before a flow line 1`] = `
[
  "0:24-26 tv-diag tv-diag--error 'xN' requires a schedule clause (every / + / at)",
  "1:7-9 tv-diag tv-diag--error Duplicate 'lifetime' clause",
]
`;

exports[`the marks the editor puts on a flow program > a move that names no heading, on a flow line 1`] = `
[
  "1:15-22 tv-diag tv-diag--error move() takes a link to a heading of this note: move([[#heading]])",
]
`;

exports[`the marks the editor puts on a flow program > a move that names no heading, on the task line 1`] = `
[
  "0:34-40 tv-diag tv-diag--error move() takes a link to a heading of this note: move([[#heading]])",
]
`;

exports[`the marks the editor puts on a flow program > a move to a heading 1`] = `[]`;

exports[`the marks the editor puts on a flow program > a nested task with its own flow 1`] = `
[
  "1:25-29 tv-diag tv-diag--error Unknown clause 'evry' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
  "2:8-10 tv-diag tv-diag--error 'xN' requires a schedule clause (every / + / at)",
]
`;

exports[`the marks the editor puts on a flow program > a paragraph going on 1`] = `
[
  "2:7-11 tv-diag tv-diag--error Unknown clause 'evry' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;

exports[`the marks the editor puts on a flow program > a read-only notation 1`] = `
[
  "0:22-35 tv-diag tv-diag--warning This line is read as Tasks notation, so the \`==>\` command never runs — it stays part of the task name",
  "1:3-9 tv-diag tv-diag--warning This line is read as Tasks notation, so the \`==>\` command never runs — it stays part of the task name",
]
`;

exports[`the marks the editor puts on a flow program > a tail padded with spaces 1`] = `
[
  "0:27-31 tv-diag tv-diag--error Unknown clause 'evry' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;

exports[`the marks the editor puts on a flow program > an ^id after the command 1`] = `
[
  "0:24-28 tv-diag tv-diag--error Unknown clause 'evry' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;

exports[`the marks the editor puts on a flow program > an error on a flow line 1`] = `
[
  "1:7-15 tv-diag tv-diag--error Unknown clause 'nonsense' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;

exports[`the marks the editor puts on a flow program > an error on a flow line padded with spaces 1`] = `
[
  "1:10-18 tv-diag tv-diag--error Unknown clause 'nonsense' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;

exports[`the marks the editor puts on a flow program > an error on the task line 1`] = `
[
  "0:24-28 tv-diag tv-diag--error Unknown clause 'evry' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;

exports[`the marks the editor puts on a flow program > an unfinished call on a flow line 1`] = `
[
  "1:3-7 tv-diag tv-diag--error Unexpected end of expression",
]
`;

exports[`the marks the editor puts on a flow program > an unfinished call, padded 1`] = `
[
  "0:20-23 tv-diag tv-diag--error Unexpected end of expression",
]
`;

exports[`the marks the editor puts on a flow program > an unfinished clause 1`] = `
[
  "0:20-23 tv-diag tv-diag--error Expected a cadence after 'every' (weekday, interval like 2w, or mo@N)",
]
`;

exports[`the marks the editor puts on a flow program > children under a command, which nothing marks 1`] = `[]`;

exports[`the marks the editor puts on a flow program > flow lines under a note and in a fence 1`] = `[]`;

exports[`the marks the editor puts on a flow program > nochildren, an unknown clause 1`] = `
[
  "0:34-44 tv-diag tv-diag--error Unknown clause 'nochildren' — clauses start with every / + / at(...) / xN / until(...) / state(...) / use(...) / setContent|setStart|setStartTime|setEnd|setEndTime|setDue|setDueTime(...) / move(...)",
]
`;
